WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42632
Following change @62542, webkit doesn't compile when the inspector is disabled
https://bugs.webkit.org/show_bug.cgi?id=42632
Summary
Following change @62542, webkit doesn't compile when the inspector is disabled
Leon Clarke
Reported
2010-07-20 05:54:57 PDT
...and Android currently doesn't use the inspector.
Attachments
Proposed fix
(3.78 KB, patch)
2010-07-20 05:58 PDT
,
Leon Clarke
no flags
Details
Formatted Diff
Diff
Removing whole InspectorDOMAgent
(2.88 KB, patch)
2010-07-20 07:04 PDT
,
Leon Clarke
pfeldman
: review+
leonclarke
: commit-queue-
Details
Formatted Diff
Diff
And again with all the files
(3.75 KB, patch)
2010-07-20 08:38 PDT
,
Leon Clarke
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Leon Clarke
Comment 1
2010-07-20 05:58:04 PDT
Created
attachment 62059
[details]
Proposed fix
Pavel Feldman
Comment 2
2010-07-20 06:17:35 PDT
Hm. Can we hide InspectorDOMAgent instead?
Leon Clarke
Comment 3
2010-07-20 06:27:32 PDT
At first glance,it looks like that will be a more complex change, however it may well be philosophically tidier. I'll investigate a bit more...
Leon Clarke
Comment 4
2010-07-20 07:04:11 PDT
Created
attachment 62072
[details]
Removing whole InspectorDOMAgent That looks like a good idea, removing the whole InspectorDOMAgent
Leon Clarke
Comment 5
2010-07-20 08:26:41 PDT
That patch was missing a file. Hang on...
Leon Clarke
Comment 6
2010-07-20 08:38:29 PDT
Created
attachment 62080
[details]
And again with all the files
WebKit Commit Bot
Comment 7
2010-07-20 10:35:56 PDT
Comment on
attachment 62080
[details]
And again with all the files Clearing flags on attachment: 62080 Committed
r63753
: <
http://trac.webkit.org/changeset/63753
>
WebKit Commit Bot
Comment 8
2010-07-20 10:36:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug